--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div id="app">
-		<h1 class="text-3xl font-bold text-center mt-10">명함 날짜 생성기</h1>
-		<h2 class="text-xl text-center mt-4">{{today}}</h2>
+		<h1 class="text-3xl font-bold text-center mt-10">명함 문제 생성기</h1>
+		<h2 class="text-sm text-center mt-4">{{today}}</h2>
 		<div class="flex flex-col items-center">
 			<div v-for="dat, idx in data">
 				<div class="font-bold text-center mt-6 mb-2">{{idx}}</div>
@@ -36,7 +36,7 @@ const NUM = [
   [[1, 0, 1], [1, 0, 1], [1, 1, 1], [0, 0, 1], [0, 0, 1]],
   [[1, 1, 1], [1, 0, 0], [1, 1, 1], [0, 0, 1], [1, 1, 1]],
   [[1, 1, 1], [1, 0, 0], [1, 1, 1], [1, 0, 1], [1, 1, 1]],
-  [[1, 1, 1], [1, 0, 1], [1, 0, 1], [0, 0, 1], [0, 0, 1]],
+  [[1, 1, 1], [1, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1]],
   [[1, 1, 1], [1, 0, 1], [1, 1, 1], [1, 0, 1], [1, 1, 1]],
   [[1, 1, 1], [1, 0, 1], [1, 1, 1], [0, 0, 1], [1, 1, 1]]
 ];
